[package]
name = "incremental-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
incremental-methods = { path = "methods" }
anyhow = "1.0.98"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
risc0-build = { version = "2.1.0", features = ["unstable"] }
risc0-zkvm = { version = "=2.1.0", features = ["heap-embedded-alloc", "unstable"] }
risc0-r0vm = "2.1.0"
risc0-circuit-rv32im = { version = "2.0.4", default-features = false, features = ["execute"] }


[features]
cuda = ["risc0-zkvm/cuda"]
default = []
prove = ["risc0-zkvm/prove"]

