[package]
name = "aggregator"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
blst = { version = "=0.3.14", features = ["no-threads"] }
c-kzg = { version = "2.1.1", features = ["eip-7594"] }
rkyv = "0.8.9"
substrate-bn = "=0.6.0"

kailua-common = { git = "https://github.com/risc0/kailua", rev = "v1.0.0-rc.1", default-features = false, package = "kailua-common" }

risc0-zkvm = { version = "=2.1.0", features = ["std", "heap-embedded-alloc", "unstable"] }

[patch.crates-io]
blst = { git = "https://github.com/risc0/blst", tag = "v0.3.14-risczero.2"}
c-kzg = { git = "https://github.com/risc0/c-kzg-4844.git", tag = "c-kzg/v2.1.1-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.1" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
substrate-bn = { git = "https://github.com/risc0/paritytech-bn", branch = "release/v0.6.0" }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }